2004-05-20  Raja R Harinath  <rharinath@novell.com>

	* configure.in (AC_OUTPUT): Add tools/Makefile and
	tools/locale-builder/Makefile.
	* Makefile.am (SUBDIRS): Remove tools.
	(DIST_SUBDIRS): Add 'tools'.
	(bootstrap): Rewrite so that we get two new targets.
	(faststrap): New two-stage build.
	(fasterstrap): New one-stage build.

2004-05-19  Jackson Harper  <jackson@ximain.com>

	* tools/
	* tools/Makefile.am: Add tools directory
	* tools/locale-builder: Add the locale-builder tool, this tool is
	not built by default as it is only needed by people that wish to
	moidify culture data.
	* Makefile.am: Add tools to build
	
Wed May 19 13:22:19 EDT 2004 Paolo Molaro <lupus@ximian.com>

	* configure.in: make MacOSX default to use the included libgc.

2004-05-18  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Get rid of -DMONO_USE_EXC_TABLES.

2004-05-19  Raja R Harinath  <rharinath@novell.com>

	* configure.in: Use proper autoconf idiom to pass additional
	arguments to libgc/configure.
	(PLATFORM_WIN32, NEED_LINK_UNLINK): Use three-argument AC_DEFINE.
	* acconfig.h: Update to reflect changes.

2004-05-17  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (tmpinst-dir): Creates _tmpinst tree if
	necessary. Move body ...
	(tmpinst-dir.stamp): ... here.
	(stage3): Don't remove _tmpinst tree.
	(bootstrap-clean, bootstrap-check): New rules.  They run the
	corresponding rules in the mcs/ tree.

2004-05-14  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am: Revert unlogged unexplained changes.
	(stage3): Make 'all-profiles' since the mono source tarball
	carries all the net_2_0 preview dlls.

2004-05-11  Jackson Harper  <jackson@ximian.com>

	* runtime/net_1_1/Makefile.am:
	* runtime/net_2_0/Makefile.am: cscompmgd.dll is lowercase now.
	
2004-05-10  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (tmpinst-dir): Always add $tmpinst/lib to MONO_PATH.
	Fix quoting of commands.

2004-05-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>
